# raspberry_clock_in

./: .gitignore  CMakeLists.txt  README.md
config/: config.ini
design/: Toteutussuunnitelma_jaju.docx  Vaatimusmaarittely_jaju.docx
include/: config.h  config_data.h  config_handler.h  database.h  database_config.h  database_sql.h  gpio_functions.h  gpio_handler.h  gpio_init.h  keypad.h  keypad_config.h  leds.h  leds_config.h  pins.h  sounds.h  sounds_config.h  timer.h
include/keypad/: keypad.h  keypad_gpio.h
sounds/: credits.md
src/: config.c  config_handler.c  database.c  gpio_functions.c  gpio_handler.c  gpio_init.c  keypad.c  leds.c  main.c  pins.c  rfid_main.c  rfids.c  sounds.c  timer.c
src/keypad/: keypad.c  keypad_gpio.c
